<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.albertlardizabal.appportfolio.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView"
            style="@style/TextViewTitle"
            android:layout_marginTop="12dp"
            android:text="@string/activity_main_title_label" />

        <Button
            android:id="@+id/button"
            style="@style/AppNameButton"
            android:layout_below="@+id/textView"
            android:layout_marginTop="24dp"
            android:onClick="didTapAppButton"
            android:text="@string/title_first_app" />

        <Button
            android:id="@+id/button2"
            style="@style/AppNameButton"
            android:layout_below="@+id/button"
            android:layout_marginTop="18dp"
            android:onClick="didTapAppButton"
            android:text="@string/title_second_app" />

        <Button
            android:id="@+id/button3"
            style="@style/AppNameButton"
            android:layout_below="@+id/button2"
            android:layout_marginTop="18dp"
            android:onClick="didTapAppButton"
            android:text="@string/title_third_app" />

        <Button
            android:id="@+id/button4"
            style="@style/AppNameButton"
            android:layout_below="@+id/button3"
            android:layout_marginTop="18dp"
            android:onClick="didTapAppButton"
            android:text="@string/title_fourth_app" />

        <Button
            android:id="@+id/button5"
            style="@style/AppNameButton"
            android:layout_below="@+id/button4"
            android:layout_marginTop="18dp"
            android:onClick="didTapAppButton"
            android:text="@string/title_fifth_app" />

        <Button
            android:id="@+id/button6"
            style="@style/AppNameButton"
            android:layout_below="@+id/button5"
            android:layout_marginTop="18dp"
            android:background="@color/colorSecondary"
            android:onClick="didTapAppButton"
            android:text="@string/title_sixth_app" />
    </RelativeLayout>
</ScrollView>
